--- a/c-struct.cabal
+++ b/c-struct.cabal
@@ -25,13 +25,17 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Foreign.C.Struct
+      Foreign.C.Struct.Parts
   other-modules:
       Paths_c_struct
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
+    , primitive
+    , template-haskell
   default-language: Haskell2010
 
 test-suite c-struct-test
@@ -43,6 +47,9 @@ test-suite c-struct-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , c-struct
+    , primitive
+    , template-haskell
   default-language: Haskell2010
