--- a/c-struct.cabal
+++ b/c-struct.cabal
@@ -6,12 +6,14 @@ cabal-version: 1.12
 
 name:           c-struct
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/c-struct#readme>
-homepage:       https://github.com/githubuser/c-struct#readme
-bug-reports:    https://github.com/githubuser/c-struct/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+synopsis:       To make a wrapper for struct of C language
+description:    Please see the README on GitHub at <https://github.com/YoshikuniJujo/c-struct#readme>
+category:       Foreign
+homepage:       https://github.com/YoshikuniJujo/c-struct#readme
+bug-reports:    https://github.com/YoshikuniJujo/c-struct/issues
+author:         Yoshikuni Jujo
+maintainer:     yoshikuni.jujo.pc@gmail.com
+copyright:      2021 Yoshikuni Jujo
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,13 +23,13 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/c-struct
+  location: https://github.com/YoshikuniJujo/c-struct
 
 library
   exposed-modules:
       Foreign.C.Struct
-      Foreign.C.Struct.Parts
   other-modules:
+      Foreign.C.Struct.Parts
       Paths_c_struct
   hs-source-dirs:
       src
