--- a/package.yaml
+++ b/package.yaml
@@ -1,23 +1,23 @@
 name:                c-struct
 version:             0.1.0.0
-github:              "githubuser/c-struct"
+github:              "YoshikuniJujo/c-struct"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+author:              "Yoshikuni Jujo"
+maintainer:          "yoshikuni.jujo.pc@gmail.com"
+copyright:           "2021 Yoshikuni Jujo"
 
 extra-source-files:
 - README.md
 - ChangeLog.md
 
 # Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
+synopsis:            To make a wrapper for struct of C language
+category:            Foreign
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/c-struct#readme>
+description:         Please see the README on GitHub at <https://github.com/YoshikuniJujo/c-struct#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -27,6 +27,7 @@ dependencies:
 
 library:
   source-dirs: src
+  exposed-modules: Foreign.C.Struct
 
 tests:
   c-struct-test:
