c-struct: Foreign.C.Struct.TypeSynonyms

--- a/c-struct.cabal
+++ b/c-struct.cabal
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Foreign.C.Struct
+      Foreign.C.Struct.TypeSynonyms
   other-modules:
       Foreign.C.Struct.Ord
       Foreign.C.Struct.Parts
